# unity-mcp-server-plugin

./: .gitignore  DEPLOYMENT.md  README.md  __init__.py  example_usage.py  integration_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  skills-lock.json  test_plugin.py  unity_mcp_plugin.py
.github/workflows/: ci.yml
scripts/: package_install.py
unity_mcp/: __init__.py  _formatting.py  client.py  exceptions.py  kernel_registration.py  models.py  plugin.py  process_manager.py  security.py  tool_mapper.py
