[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-mcp-plugin"
version = "3.1.0"
description = "Semantic Kernel plugin for the Unity MCP server (stdio transport)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andreu" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "semantic-kernel>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Ozymandros/Unity-MCP-SK-Plugin"
Repository = "https://github.com/Ozymandros/Unity-MCP-SK-Plugin"
Issues = "https://github.com/Ozymandros/Unity-MCP-SK-Plugin/issues"

[tool.setuptools]
packages = ["unity_mcp"]

# pytest config lives in pytest.ini (project root)
